# tiny-ray

./: .gitignore  Cargo.toml  README.md
scenes/: cornell-modular.json  cornell-modular.yaml  cornell.json  cornell.ron  cornell.yaml  demo.json  demo.ron  demo.yaml  neon.json  neon.ron  neon.yaml  studio.json  studio.ron  studio.yaml  sunset.json  sunset.ron  sunset.yaml
scenes/fragments/: cornell-objects.yaml  cornell-walls.yaml
scripts/: commit-at.sh
src/: bvh.rs  camera.rs  cli.rs  color.rs  dither.rs  film.rs  geometry_tests.rs  hittable.rs  intersection.rs  intersection_suite.rs  lights.rs  main.rs  material.rs  plane.rs  ray.rs  renderer.rs  renderer_tests.rs  sampling.rs  scene.rs  shade.rs  sky.rs  sphere.rs  vec3.rs  vec3_suite.rs  world.rs
src/scene/: build.rs  format.rs  loader.rs  mod.rs  validate.rs
