[package]
name = "tiny-ray"
version = "0.1.0"
edition = "2021"
description = "A minimal path tracer from scratch — spheres, materials, lighting, BVH, and scene files"
license = "MIT"
readme = "README.md"

[dependencies]
image = "0.24"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.133"
serde_yaml = "0.8.26"
ron = "0.8"

[profile.release]
lto = true
codegen-units = 1
